<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">A TV Remote Receiver</string>
    <string name="accessibility_input_service_label">A TV Remote Inputs</string>
    <string name="accessibility_input_service_description">Allows control of your device via a remote client</string>
    <string name="ime_input_service_label">A TV Remote Keyboard</string>
    <string name="notification_input_service_label">Media controls</string>
    <string name="button_cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="button_retry">retry</string>
    <string name="button_discard">discard</string>
    <string name="title_pairing_popup">pair remote</string>
    <string name="label_pairing_popup_code">Pairing code</string>
    <string name="label_pairing_popup_fingerprint">Fingerprint (make sure it matches!)</string>
    <string name="button_pairing_popup_disable_for_time">disable pairing for 6 hours</string>
    <string name="notification_pairing_complete_title">pairing complete</string>
    <string name="notification_pairing_complete_description">new device successfully paired</string>
    <string name="notification_pairing_failed_title">pairing failed</string>
    <string name="notification_pairing_failed_description_invalid_code">invalid pairing code</string>
    <string name="notification_pairing_failed_description_cancelled">pairing was cancelled</string>
    <string name="notification_remote_connected_title_format">{0} connected</string>
    <string name="notification_remote_connected_description">remote connected</string>
    <string name="notification_remote_disconnected_title_format">{0} disconnected</string>
    <string name="notification_remote_disconnected_description">remote disconnected</string>
    <string name="protocol_error_mouse_move_bad_coordinates">mouse coordinates must be exactly two integers</string>
    <string name="protocol_error_unexpected">encountered unexpected error: {0} - {1}</string>
    <string name="protocol_error_event_timeout">timed out</string>
    <string name="protocol_error_pairing_code_invalid">pairing code rejected</string>
    <string name="protocol_error_extra_button_no_such_button">unknown button</string>
    <string name="protocol_error_media_button_failed">failed to dispatch media key</string>
    <string name="protocol_error_unspecified">remote replied: unspecified error</string>
    <string name="protocol_error_unauthorized">remote replied: unauthorized</string>
    <string name="protocol_error_op_unsupported">operation not supported by remote</string>
    <string name="protocol_error_response_invalid">unexpected response from remote</string>
    <string name="control_source_not_loaded_accessibility">
        Please enable the \"A TV Remote Inputs\" accessibility service in your TV settings.\n
        \n
        It is used to:\n
        - allow you to navigate your TV interface\n
        - allow you to use your phone keyboard on your TV\n
        - seamlessly switch to and from a simulated keyboard for better navigation on older TVs\n
        \n
        Open the receiver app on your TV for more information.
    </string>
    <string name="control_source_not_loaded_notification_listener">
        Please grant notification access to \"A TV Remote Receiver\" in your TV settings.\n
        \n
        It is used to:\n
        - allow you to control media playback\n
        - display information about currently playing media\n
        \n
        Open the receiver app on your TV for more information.
    </string>
    <string name="control_source_not_loaded_enable_ime">
        Please enable \"A TV Remote Keyboard\" in your TV settings.\n
        \n
        It is used to:\n
        - let you send text to type on your TV\n
        - simulate keyboard buttons\n
        - assist with UI navigation on older TVs\n
        - simulate system-wide media keys\n
        \n
        Open the receiver app on your TV for more information.
    </string>
    <string name="control_source_not_loaded_switch_to_ime">
        Please switch to \"A TV Remote Keyboard\" in your TV settings.\n
        \n
        It is used to:\n
        - let you send text to type on your TV\n
        - simulate keyboard buttons\n
        - assist with UI navigation on older TVs\n
        - simulate system-wide media keys\n
        \n
        Open the receiver app on your TV for more information.
    </string>
    <string name="control_source_not_loaded_application_overlay">
        Please allow \"A TV Remote Receiver\" to display above other apps in your TV settings.\n
        \n
        This is needed to:\n
        - display the pairing dialog\n
        - display permission request rationales\n
        \n
        Open the receiver app on your TV for more information.
    </string>
    <string name="permission_request_subtitle_generic">A TV Remote Receiver needs your permission for:</string>
    <string name="permission_request_instructions_header_settings_location">This permission can usually be found under:</string>
    <string name="permission_request_grant_button_settings">take me there</string>
    <string name="permission_request_instructions_settings_not_found_error">please manually grant the permission</string>
    <string name="feature_text_input">typing text you\'ve sent to your TV</string>
    <string name="feature_text_input_alt">alternative text input</string>
    <string name="feature_dpad">UI navigation</string>
    <string name="feature_dpad_alt">alternative UI navigation</string>
    <string name="feature_fake_dpad">UI navigation (fake dpad)</string>
    <string name="feature_ime_dpad_assist">improved UI navigation for some TVs</string>
    <string name="feature_switch_keyboard">automatic keyboard switching</string>
    <string name="feature_system_wide_media_control">simulating media keys</string>
    <string name="feature_media_session_control">media controls for active media sessions</string>
    <string name="feature_media_metadata">displaying media info on remote</string>
    <string name="feature_volume_control">volume control</string>
    <string name="feature_volume_control_alt">alternative volume control</string>
    <string name="feature_fake_mouse">mouse control</string>
    <string name="feature_power">simulate power button</string>
    <string name="permission_request_title_enable_keyboard">enable keyboard</string>
    <string name="permission_request_title_switch_keyboard">switch keyboard</string>
    <string name="permission_request_subtitle_keyboard">A TV Remote Keyboard is used for:</string>
    <string name="permission_request_instructions_details_enable_keyboard">Settings > Device Preferences > Keyboard > Manage Keyboards</string>
    <string name="permission_request_instructions_header_switch_keyboard">Can\'t switch keyboards automatically on this device:</string>
    <string name="ime_input_view_notice">the keyboard is currently set to only take input from the remote app</string>
    <string name="ime_input_view_revert_soft_keyboard_button">switch back to on-screen keyboard</string>
    <string name="compatibility_test_results_title">compatibility test complete</string>
    <string name="compatibility_test_results_summary_success">A TV Remote Receiver has determined the optimal settings for your device in its current configuration.</string>
    <string name="compatibility_test_results_verdict_header">verdict</string>
    <string name="compatibility_test_results_verdict_no_significant_problems">No significant problems</string>
    <string name="compatibility_test_results_save_button">save compatibility settings</string>
    <string name="input_method_preferences_title">Advanced Input Method Configuration</string>
    <string name="input_method_preferences_description">This screen allows you to manually define which control handlers are used for different types of input. A TV Remote Receiver attempts to determine the best settings automatically, so this shouldn\'t be necessary in most cases.</string>
    <string name="input_method_preferences_custom_priority_switch_label">Use custom control handler priorities</string>
    <string name="input_method_preferences_dpad_priority_label">Directional Pad Input</string>
    <string name="input_method_preferences_keyboard_priority_label">Keyboard Input</string>
    <string name="input_method_preferences_media_priority_label">Primary Media Control Input</string>
    <string name="input_method_preferences_full_navigation_priority_label">Full Navigation Input</string>
    <string name="input_method_preferences_back_navigation_priority_label">Back Navigation Input</string>
    <string name="input_method_preferences_volume_priority_label">Volume Input</string>
    <string name="input_method_preferences_mouse_priority_label">Mouse Input</string>
    <string name="input_method_preferences_activity_launcher_priority_label">Activity Launch Input</string>
    <string name="input_method_preferences_dpad_description">accessibility dpad is Android 13+ only. ime dpad works on most apps, has reliability issues. fake dpad works on native UIs (usually). accessibility assisted ime dpad tries to balance fake/ime dpad.</string>
    <string name="input_method_preferences_keyboard_description">ime keyboard utilizes a keyboard service, accessibility keyboard only works on Android 13+ and only works on native text boxes.</string>
    <string name="input_method_preferences_media_description">ime media simulates real media buttons, notification service media controls the primary media session directly. not all apps use the media session api (but most do).</string>
    <string name="input_method_preferences_full_navigation_description">accessibility navigation uses global accessibility actions to simulate navigation events.</string>
    <string name="input_method_preferences_back_navigation_description">accessibility navigation uses a global accessibility action to simulate back navigation. ime navigation sends a back button key event to the application.</string>
    <string name="input_method_preferences_volume_description">accessibility volume directly controls the volume via audio manager. ime volume sends volume button key events to the application, which may be ignored and not work.</string>
    <string name="input_method_preferences_mouse_cursor_description">accessibility cursor draws a fake mouse cursor and simulates gestures for clicking/dragging. the device must have a touch screen or support fake touch for this to work (most real TVs don\'t)</string>
    <string name="input_method_preferences_activity_launcher_description">accessibility launcher uses accessibility service context to launch activities from the background.</string>
    <string translatable="false" name="input_method_preferences_custom_priority_key">custom_control_handler_priority</string>
    <string translatable="false" name="input_method_preferences_dpad_priority_key">manual_dpad_handler_priority</string>
    <string translatable="false" name="input_method_preferences_keyboard_priority_key">manual_keyboard_handler_priority</string>
    <string translatable="false" name="input_method_preferences_media_priority_key">manual_media_handler_priority</string>
    <string translatable="false" name="input_method_preferences_full_navigation_priority_key">manual_full_navigation_handler_priority</string>
    <string translatable="false" name="input_method_preferences_back_navigation_priority_key">manual_back_navigation_handler_priority</string>
    <string translatable="false" name="input_method_preferences_volume_priority_key">manual_volume_handler_priority</string>
    <string translatable="false" name="input_method_preferences_mouse_cursor_priority_key">manual_mouse_cursor_handler_priority</string>
    <string translatable="false" name="input_method_preferences_activity_launcher_priority_key">manual_activity_launcher_handler_priority</string>
</resources>