<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.test.CompatibilityTestResultsActivity">

    <!-- constraint layout is used to avoid bugs with maxWidth -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="?android:attr/windowBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_max="420dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:textAppearance="@style/TextAppearance.Leanback.Title"
                    android:text="@string/compatibility_test_results_title"
                    />

                <TextView
                    android:id="@+id/summary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textAppearance="@style/TextAppearance.Leanback.DetailsDescriptionBody"
                    tools:text="@string/compatibility_test_results_summary_success"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textAppearance="@style/TextAppearance.Leanback.Header"
                    android:text="@string/compatibility_test_results_verdict_header"
                    />

                <TextView
                    android:id="@+id/compatibility_verdict_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textAppearance="@style/TextAppearance.Leanback.DetailsDescriptionBody"
                    android:gravity="center_vertical"
                    tools:drawableStart="@drawable/accepted"
                    tools:drawableTint="@color/good_thing"
                    tools:text="@string/compatibility_test_results_verdict_no_significant_problems"
                    />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <include
                android:id="@+id/advanced_info_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_dropdown"
                android:layout_marginTop="24dp"
                />

            <LinearLayout
                android:id="@+id/advanced_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/save_button"
                    style="@style/Widget.Leanback.DetailsActionButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compatibility_test_results_save_button"
                    android:focusedByDefault="true"
                    />

                <Button
                    android:id="@+id/cancel_button"
                    style="@style/Widget.Leanback.DetailsActionButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancel"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>