<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.ATVRemoteReceiver.Leanback"
    >

    <!-- the parent style attributes get overridden -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="?android:attr/windowBackground"
        android:layout_gravity="center_horizontal|bottom"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="UselessParent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="?android:attr/colorBackgroundFloating"
            android:padding="8dp"
            android:gravity="center"
            android:focusable="true"
            >

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="420dp"
                android:text="@string/ime_input_view_notice"
                android:textAlignment="center"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/revert_soft_keyboard_button"
            style="@style/Widget.Leanback.DetailsActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxWidth="420dp"
            android:text="@string/ime_input_view_revert_soft_keyboard_button"
            />

    </LinearLayout>
</FrameLayout>